Fixed hidden menu overflow in tables

--- a/spruit_spnet/css/civicrm_sp.css
+++ b/spruit_spnet/css/civicrm_sp.css
@@ -42,6 +42,27 @@
     display: none;
 }
 
+.crm-container ul.panel {
+  display: none;
+  z-index: 9999;
+  position: absolute;
+  border-bottom: 0;
+  text-align: left;
+  margin: 0;
+  width: 230px;
+}
+#crm-container ul.panel {
+ background: #222;
+}
+
+#crm-container ul.panel li a {
+  color: #DFDFDF;
+  background: #333;
+  padding: 4px;
+  font-size: .8em;
+}
+
+
 #crm-container table.report-layout tr {
    font-size: 14px;
    font-size: 0.9rem;
@@ -284,6 +305,9 @@
     height: 0.9rem;
     overflow: hidden;
     white-space: nowrap
+}
+.crm-container tr td {
+  overflow: visible !important;
 }
 
 .crm-container #spqs-results td.spqs-id {
